--- a/Problema3.qsf
+++ b/Problema3.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY contador
+set_global_assignment -name TOP_LEVEL_ENTITY contadorFPGA
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "22:57:57  FEBRUARY 15, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
@@ -47,9 +47,6 @@ set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name BOARD "DE1-SoC Board"
 set_global_assignment -name SYSTEMVERILOG_FILE contador.sv
 set_global_assignment -name SYSTEMVERILOG_FILE contador_tb.sv
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
@@ -58,9 +55,18 @@ set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (Verilog)"
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
-set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH contador_tb -section_id eda_simulation
+set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH contadorFPGA_tb -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_NAME contador_tb -section_id eda_simulation
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id contador_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME contador_tb -section_id contador_tb
+set_global_assignment -name SYSTEMVERILOG_FILE contadorFPGA.sv
+set_global_assignment -name SYSTEMVERILOG_FILE contadorFPGA_tb.sv
+set_global_assignment -name EDA_TEST_BENCH_NAME contadorFPGA_tb -section_id eda_simulation
+set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id contadorFPGA_tb
+set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME contadorFPGA_tb -section_id contadorFPGA_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TEST_BENCH_FILE contador_tb.sv -section_id contador_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE contadorFPGA_tb.sv -section_id contadorFPGA_tb
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
