--- a/laboratorio_2/Problema1/alu_4bit.qsf
+++ b/laboratorio_2/Problema1/alu_4bit.qsf
@@ -70,7 +70,6 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id alu_4bit_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME alu_4bit_tb -section_id alu_4bit_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE alu_4bit_tb.sv -section_id alu_4bit_tb
 set_global_assignment -name SYSTEMVERILOG_FILE multiplier_4bit.sv
-set_global_assignment -name SYSTEMVERILOG_FILE BinaryToDecimal.sv
 set_global_assignment -name SYSTEMVERILOG_FILE DigitExtractor.sv
 set_global_assignment -name SYSTEMVERILOG_FILE segmentOutput.sv
 set_location_assignment PIN_AE11 -to a[0]
@@ -106,4 +105,5 @@ set_location_assignment PIN_AE27 -to s3[1]
 set_location_assignment PIN_AE26 -to s3[0]
 set_location_assignment PIN_Y16 -to start
 set_global_assignment -name SYSTEMVERILOG_FILE divider_4bit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE and_4bit.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
