--- a/laboratorio_2/Problema1/alu_4bit.qsf
+++ b/laboratorio_2/Problema1/alu_4bit.qsf
@@ -107,4 +107,5 @@ set_location_assignment PIN_Y16 -to start
 set_global_assignment -name SYSTEMVERILOG_FILE divider_4bit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE and_4bit.sv
 set_global_assignment -name SYSTEMVERILOG_FILE or_4bit.sv
+set_global_assignment -name SYSTEMVERILOG_FILE xor_4bit.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
