--- a/laboratorio_3/Battleship.qsf
+++ b/laboratorio_3/Battleship.qsf
@@ -160,4 +160,5 @@ set_location_assignment PIN_W17 -to matriz[2]
 set_location_assignment PIN_W19 -to matriz[3]
 set_location_assignment PIN_Y19 -to matriz[4]
 set_global_assignment -name SYSTEMVERILOG_FILE you_lose.sv
+set_global_assignment -name SYSTEMVERILOG_FILE you_win.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
