Movimiemto, gestion de turnos y posicion de barcos

--- a/laboratorio_3/Battleship.qsf
+++ b/laboratorio_3/Battleship.qsf
@@ -174,4 +174,8 @@ set_global_assignment -name EDA_TEST_BENCH_NAME shot_PC_tb -section_id eda_simul
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id shot_PC_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME shot_PC_tb -section_id shot_PC_tb
 set_global_assignment -name EDA_TEST_BENCH_FILE shot_PC_tb.sv -section_id shot_PC_tb
+set_global_assignment -name SYSTEMVERILOG_FILE cambiarIndices.sv
+set_global_assignment -name SYSTEMVERILOG_FILE colocar_barcos.sv
+set_global_assignment -name SYSTEMVERILOG_FILE gestion_turnos.sv
+set_global_assignment -name SYSTEMVERILOG_FILE manejo_matrices_seleccionar.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
