--- a/ProyectoFinal/ProyectoFinal.qsf
+++ b/ProyectoFinal/ProyectoFinal.qsf
@@ -72,6 +72,8 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE dmem.sv
 set_global_assignment -name SYSTEMVERILOG_FILE imem.sv
-set_global_assignment -name MIF_FILE ram_data.mif
-set_global_assignment -name QIP_FILE ram1.qip
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name MIF_FILE data_memory.mif
+set_global_assignment -name MIF_FILE instr_memory.mif
+set_global_assignment -name QIP_FILE ram.qip
+set_global_assignment -name QIP_FILE rom.qip
